--- a/pages/learn.html
+++ b/pages/learn.html
@@ -8,7 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/magnific-popup.css">
-  <link rel="stylesheet" href="../css/animate.min.css">
   <link rel="stylesheet" href="../css/learn.css">
   <link rel="stylesheet" href="../css/navbar.css">
 </head>
@@ -83,7 +82,7 @@
                 <div class="info-without-more">
                   <h3 class="title">Basic Structure!</h3>
                   <p class="prev-p">Let's actually start creating! Excited?? I know I am!</p>
-                  <a class="comments-pre">
+                  <a class="comments-pre" href="chapt2.html">
                     Chapter 2
                   </a>
                   </a>
@@ -98,7 +97,7 @@
                 <div class="info-without-more">
                   <h3 class="title">Time to style!</h3>
                   <p class="prev-p">Time to bring out your artistic capabilities!</p>
-                  <a class="comments-pre">
+                  <a class="comments-pre" href="chapt3.html">
                     Chapter 3
                   </a>
                 </div>
@@ -128,7 +127,7 @@
                 <div class="info-without-more">
                   <h3 class="title">Web development project!</h3>
                   <p class="prev-p">Now let's get our hands dirty and make an actual website!</p>
-                  <a class="comments-pre">
+                  <a class="comments-pre" href="finalChapt.html">
                     Project
                   </a>
                 </div>
