--- a/pages/finalChapt.html
+++ b/pages/finalChapt.html
@@ -66,7 +66,8 @@
 
         <button style="display: none;" id="resetButton">Reset</button>
         <button style="display: none;" id="verifyButton">Verify</button>
-        
+    
+        <script src="../js/Sortable-1.15.3/sortable.min.js"></script>
     <script src="../js/finalChapt.js"></script>
     <script src="../js/lessons.js"></script>
 </body>
