--- a/pages/playground.html
+++ b/pages/playground.html
@@ -3,77 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>Draggable List</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1 id="name">Your Name</h1>
-        <!-- Add the profile picture here -->
-        <img id="profile-pic" src="../assets/profilePic.jpg" alt="Profile Picture">
-        <p id="bio">This is a short bio about you. You can write about your hobbies, interests, or anything else that you want people to know.</p>
-        <button onclick="changeBio()">Change Bio</button>
+    <div class="list-container">
+        <ul id="draggable-list">
+            <li class="draggable-item">Item 1</li>
+            <li class="draggable-item">Item 2</li>
+            <li class="draggable-item">Item 3</li>
+            <li class="draggable-item">Item 4</li>
+        </ul>
     </div>
-    
+
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f8f8f8;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        } 
 
-        .container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            width: 300px;
-        }
+.list-container {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+}
 
-        h1 {
-            color: #333;
-            font-size: 24px;
-        }
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
 
-         #profile-pic {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            margin: 15px 0;
-            object-fit: cover;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
+.draggable-item {
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    margin: 10px 0;
+    padding: 10px;
+    cursor: move;
+    transition: background 0.3s ease;
+}
 
-        p {
-            color: #666;
-            font-size: 16px;
-            margin: 15px 0;
-        }
+.draggable-item:hover {
+    background: #f0f0f0;
+}
 
-        button {
-            padding: 10px 20px;
-            background-color: #333;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
 
-        button:hover {
-            background-color: #555;
-        }
     </style>
 
+<script src="../js/Sortable-1.15.3/sortable.min.js"></script>
     <script>
-        function changeBio() {
-            // Your JavaScript to change the bio
-        }
+
+        // Initialize sortable functionality
+document.addEventListener('DOMContentLoaded', function() {
+    var el = document.getElementById('draggable-list');
+    var sortable = Sortable.create(el, {
+        animation: 150,
+        ghostClass: 'blue-background-class', // Optional: class for the ghost item
+    });
+});
+
+
     </script>
 </body>
 </html>
