--- a/pages/finalChapt.html
+++ b/pages/finalChapt.html
@@ -25,10 +25,10 @@
                     <a href="learn.html">
                         <img src="../assets/nav1.png" alt="Image 1">
                     </a>
-                    <a href="quizzes.html">
+                    <a href="404.html">
                         <img src="../assets/nav2.png" alt="Image 2">
                     </a>
-                    <a href="download.html">
+                    <a href="404.html">
                         <img src="../assets/nav3.png" alt="Image 3">
                     </a>
                     <a href="about.html">
@@ -66,7 +66,7 @@
 
         <button style="display: none;" id="resetButton">Reset</button>
         <button style="display: none;" id="verifyButton">Verify</button>
-    
+        <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
         <script src="../js/Sortable-1.15.3/sortable.min.js"></script>
     <script src="../js/finalChapt.js"></script>
     <script src="../js/lessons.js"></script>
