--- a/pages/download.html
+++ b/pages/download.html
@@ -43,7 +43,7 @@
             if (window.history.length > 1) {
                 window.history.back();
             } else {
-                window.location.href = 'defaultPage.html';  // Replace with your default page
+                window.location.href = 'index.html';
             }
         });
 
